--- a/backend/Dockerfile.django
+++ b/backend/Dockerfile.django
@@ -1,5 +1,5 @@
 
-FROM python:3.9-slim
+FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
@@ -17,4 +17,4 @@ RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
 COPY . /app/
 
-CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "fridgeserver.wsgi:application", "--bind", "0.0.0.0:8000"]
