--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.idea/workspace.xml
+backend/.idea/backend.iml
+backend/.idea/dataSources.local.xml
+backend/.idea/inspectionProfiles/profiles_settings.xml
+backend/.idea/vcs.xml
+backend/.idea/misc.xml
+backend/.idea/workspace.xml
