--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,11 @@ services:
   frontend:
     build:
       context: ./fridgeui
+      args:
+        - REACT_APP_API_URL= ${REACT_APP_API_URL}
       dockerfile: Dockerfile.react 
+    environment:
+      - REACT_APP_API_URL=${REACT_APP_API_URL}
     ports:
       - "3000:80"
     depends_on:
