--- a/fridgeui/Dockerfile.react
+++ b/fridgeui/Dockerfile.react
@@ -7,10 +7,14 @@ RUN npm ci
 
 COPY . .
 
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+
 RUN npm run build
 
 FROM nginx:alpine
 COPY --from=0 /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
