--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -19,10 +19,15 @@ jobs:
         with:
           python-version: 3.11
 
+      - name: Install system dependencies for mysqlclient
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y default-libmysqlclient-dev build-essential
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt  
+          pip install -r backend/requirements.txt
 
       - name: Run migrations
         run: |
