--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -11,49 +11,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 检出仓库代码
+      # 1. Checkout repository code
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # 2. 设置 Python 环境
+      # 2. Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
 
-      # 3. 安装 MySQLclient 依赖（如果后端用 MySQL）
+      # 3. Install system dependencies for mysqlclient (if using MySQL in backend)
       - name: Install system dependencies for mysqlclient
         run: |
           sudo apt-get update
           sudo apt-get install -y default-libmysqlclient-dev build-essential
 
-      # 4. 安装后端依赖
+      # 4. Install backend dependencies (requirements.txt is located in the backend folder)
       - name: Install backend dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
-      # 5. 安装 mysqlclient 模块（如果在 requirements.txt 没有包含的话）
+      # 5. Install mysqlclient module (if not included in requirements.txt)
       - name: Install mysqlclient module
         run: pip install mysqlclient
 
-      # 6. 安装 coverage（如果需要统计后端覆盖率）
+      # 6. Install coverage (for backend test coverage reporting)
       - name: Install coverage
         run: pip install coverage
 
-      # 7. 运行数据库迁移
+      # 7. Run database migrations
       - name: Run migrations
         run: |
           python backend/manage.py makemigrations --noinput
           python backend/manage.py migrate --noinput
 
-      # 8. 运行后端测试（集成测试）
+      # 8. Run backend tests with coverage reporting
       - name: Run backend tests with coverage
         run: |
           coverage run --source=core backend/manage.py test core.test_core
           coverage report -m
 
-      # 9. 安装前端依赖并运行测试
+      # 9. Install frontend dependencies and run frontend tests
       - name: Run frontend tests
         run: |
           cd fridgeui
