--- a/backend/Dockerfile.django
+++ b/backend/Dockerfile.django
@@ -10,11 +10,16 @@ RUN apt-get update && apt-get install -y \
     gcc \
     python3-dev \
     libpq-dev \
+    libmariadb-dev \
+    libmariadb-dev-compat \
+    default-libmysqlclient-dev \
+    pkg-config \
     && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
 
 COPY . /app/
+COPY .env /app/.env
 
 CMD ["gunicorn", "fridgeserver.wsgi:application", "--bind", "0.0.0.0:8000"]
