--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,15 @@ services:
       dockerfile: Dockerfile.django
     ports:
       - "8000:8000"
+    env_file:
+      - .env
+    
 
   frontend:
     build:
       context: ./fridgeui
       args:
-        - REACT_APP_API_URL= ${REACT_APP_API_URL}
+        - REACT_APP_API_URL=${REACT_APP_API_URL}
       dockerfile: Dockerfile.react 
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
