--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -63,5 +63,5 @@ jobs:
       # 10. 运行 Selenium 测试
       - name: Run Selenium tests
         run: |
-          python -m pip install selenium pytest
-          pytest test_selenium.py --maxfail=1 --disable-warnings -q
+          pip install selenium pytest
+          pytest tests/test_selenium.py --maxfail=1 --disable-warnings -q
