update test_selenium.py version2

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -60,6 +60,11 @@ jobs:
       #     npm install
       #     npm test -- --coverage
 
+      - name: Install Chrome and Chromedriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser chromium-chromedriver
+          
       # 10. 运行 Selenium 测试
       - name: Run Selenium tests
         run: |
