--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -2,69 +2,84 @@ name: Django CI
 
 on:
   push:
-    branches: [ '*' ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ '*' ]
+    branches: [ "*" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repository code
+      # 1. 检出代码
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # 2. Set up Python environment
+      # 2. 设置 Python 环境
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
 
-      # 3. Install system dependencies for mysqlclient (if using MySQL in backend)
-      - name: Install system dependencies for mysqlclient
+      # 3. 安装系统依赖（如 mysqlclient）
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y default-libmysqlclient-dev build-essential
 
-      # 4. Install backend dependencies (requirements.txt is located in the backend folder)
+      # 4. 安装后端依赖
       - name: Install backend dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
-      # 5. Install mysqlclient module (if not included in requirements.txt)
+      # 5. 安装 mysqlclient（如未在 requirements.txt 中）
       - name: Install mysqlclient module
         run: pip install mysqlclient
 
-      # 6. Install coverage (for backend test coverage reporting)
+      # 6. 安装 coverage（用于后端测试覆盖率）
       - name: Install coverage
         run: pip install coverage
 
-      # 7. Run database migrations
-      - name: Run migrations
+      # 7. 数据库迁移 & 后端测试
+      - name: Migrate & run backend tests
         run: |
-          python backend/manage.py makemigrations --noinput
-          python backend/manage.py migrate --noinput
-
-      # 8. Run backend tests with coverage reporting
-      - name: Run backend tests with coverage
-        run: |
-          coverage run --source=core backend/manage.py test core.test_core
+          cd backend
+          python manage.py makemigrations --noinput
+          python manage.py migrate --noinput
+          coverage run --source=core manage.py test core.test_core
           coverage report -m
 
-      # 9. Install frontend dependencies and run frontend tests
-      - name: Run frontend
+      # 8. 启动后端服务 (Django)
+      - name: Start backend server
+        run: |
+          cd backend
+          nohup python manage.py runserver 0.0.0.0:8000 &
+          # 等待后端服务启动
+          sleep 10
+
+      # 9. 安装前端依赖
+      - name: Install frontend dependencies
         run: |
           cd fridgeui
           npm install
+          cp .env.example .env
 
+      # 10. 启动前端服务
+      - name: Start frontend server
+        run: |
+          cd fridgeui
+          nohup npm start &
+          # 等待前端服务启动
+          sleep 20
+
+      # 11. 安装 Chromium & Chromedriver
       - name: Install Chrome and Chromedriver
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
 
-      # 10. 运行 Selenium 测试
+      # 12. 运行 Selenium 测试
       - name: Run Selenium tests
         run: |
           pip install selenium pytest
