--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -11,37 +11,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 检出代码
+      # 1. Checkout repository code
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # 2. 设置 Python 环境
+      # 2. Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
 
-      # 3. 安装系统依赖（如 mysqlclient）
+      # 3. Install system dependencies for mysqlclient (if using MySQL in backend)
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y default-libmysqlclient-dev build-essential
 
-      # 4. 安装后端依赖
+      # 4. Install backend dependencies (requirements.txt is located in the backend folder)
       - name: Install backend dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
-      # 5. 安装 mysqlclient（如未在 requirements.txt 中）
+      # 5. Install mysqlclient module (if not included in requirements.txt)
       - name: Install mysqlclient module
         run: pip install mysqlclient
 
-      # 6. 安装 coverage（用于后端测试覆盖率）
+      # 6. Install coverage (for backend test coverage reporting)
       - name: Install coverage
         run: pip install coverage
 
-      # 7. 数据库迁移 & 后端测试
+      # 7. Run database migrations
       - name: Migrate & run backend tests
         run: |
           cd backend
@@ -50,7 +50,7 @@ jobs:
           coverage run --source=core manage.py test core.test_core
           coverage report -m
 
-      # 8. 启动后端服务 (Django)
+      # 8. Run backend tests with coverage reporting
       - name: Start backend server
         run: |
           cd backend
@@ -58,14 +58,14 @@ jobs:
           # 等待后端服务启动
           sleep 10
 
-      # 9. 安装前端依赖
+      # 9. Install frontend dependencies
       - name: Install frontend dependencies
         run: |
           cd fridgeui
           npm install
           cp .env.example .env
 
-      # 10. 启动前端服务
+      # 10. start frontend service
       - name: Start frontend server
         run: |
           cd fridgeui
@@ -73,13 +73,13 @@ jobs:
           # 等待前端服务启动
           sleep 20
 
-      # 11. 安装 Chromium & Chromedriver
+      # 11. install Chromium & Chromedriver
       - name: Install Chrome and Chromedriver
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
 
-      # 12. 运行 Selenium 测试
+      # 12. run Selenium test
       - name: Run Selenium tests
         run: |
           pip install selenium pytest
