--- a/backend/Dockerfile.django
+++ b/backend/Dockerfile.django
@@ -1,20 +1,25 @@
-
 FROM python:3.11-slim
 
+# 防止生成 pyc 文件，保证日志即时输出
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
+# 安装系统依赖
 RUN apt-get update && apt-get install -y \
     gcc \
     python3-dev \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
+
+# 复制依赖文件并安装 Python 依赖
 COPY requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
-
+# 复制所有项目文件
 COPY . /app/
 
+# 暴露端口并启动 gunicorn
+EXPOSE 8000
 CMD ["gunicorn", "fridgeserver.wsgi:application", "--bind", "0.0.0.0:8000"]
