--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,22 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile.django
+    container_name: backend
     ports:
       - "8000:8000"
+    env_file:
+      - ./backend/.env
 
   frontend:
     build:
       context: ./fridgeui
+      dockerfile: Dockerfile.react
       args:
-        - REACT_APP_API_URL= ${REACT_APP_API_URL}
-      dockerfile: Dockerfile.react 
+        REACT_APP_API_URL=${REACT_APP_API_URL}
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
+    container_name: frontend
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
