--- a/fridgeui/nginx.conf
+++ b/fridgeui/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     # Proxy requests to backend (if backend is running inside Docker)
     location /api/ {
-        proxy_pass http://backend:8000;  # Change this to your actual backend service
+        proxy_pass http://3.139.71.177:8000;  # Change this to your actual backend service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
