NEW FEATURE: UPLOAD PROFILE IMAGE
1. profile page: left region
2. nav bar profile image
3. preview image

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,8 @@ SECRET_KEY="django-insecure-your-secret-key"
 
 
 # JWT TOKEN 
-ACCESS_TOKEN_LIFETIME=30  # in minutes
-REFRESH_TOKEN_LIFETIME=1440  # in minutes (1 day)
+ACCESS_TOKEN_LIFETIME=30 
+REFRESH_TOKEN_LIFETIME=1440 
 
 DB_NAME="django_db"
 DB_USER="django_user"
