--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -2,9 +2,9 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   test:
@@ -44,7 +44,7 @@ jobs:
       # 7. Run database migrations
       - name: Migrate & run backend tests
         env:
-          DJANGO_ENV: test    
+          DJANGO_ENV: test
         run: |
           cd backend
           python manage.py makemigrations --noinput
@@ -57,7 +57,7 @@ jobs:
         run: |
           cd backend
           nohup python manage.py runserver 0.0.0.0:8000 &
-          # 等待后端服务启动
+          # wait for backend server to start
           sleep 10
 
       # 9. Install frontend dependencies
@@ -72,7 +72,7 @@ jobs:
         run: |
           cd fridgeui
           nohup npm start &
-          # 等待前端服务启动
+          # wait for frontend server to start
           sleep 20
 
       # # 11. install Chromium & Chromedriver
