--- a/backend/Dockerfile.django
+++ b/backend/Dockerfile.django
@@ -26,7 +26,8 @@ RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 # 复制所有项目文件
 COPY . /app/
 COPY .env /app/.env
+COPY media/ /app/media/
 
 # 暴露端口并启动 gunicorn
 EXPOSE 8000
-CMD ["gunicorn", "fridgeserver.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "fridgeserver.wsgi:application", "--bind", "0.0.0.0:8000", "--timeout", "120"]
