--- a/fridgeui/nginx.conf
+++ b/fridgeui/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -10,9 +10,17 @@ server {
         try_files $uri /index.html;
     }
 
+    location /core/ {
+        proxy_pass http://3.139.71.177:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
     # Proxy requests to backend (if backend is running inside Docker)
     location /api/ {
         proxy_pass http://3.139.71.177:8000;  # Change this to your actual backend service
+        # proxy_pass http://backend:8000;  # Change this to your actual backend service
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
