--- a/backend/Dockerfile.django
+++ b/backend/Dockerfile.django
@@ -25,7 +25,7 @@ RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
 # 复制所有项目文件
 COPY . /app/
-COPY .env /app/.env
+# COPY .env /app/.env
 COPY media/ /app/media/
 
 # 暴露端口并启动 gunicorn
