--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,5 +48,9 @@ jobs:
           docker stop backend || true && docker rm backend || true
           docker stop frontend || true && docker rm frontend || true
 
-          docker run -d --name backend -p 8000:8000 fridge-backend
+          docker run -d \
+          --name backend \
+          --env-file /home/ubuntu/fridge/backend/.env \
+          -p 8000:8000 \
+          fridge-backend
           docker run -d --name frontend -p 80:80 fridge-frontend
