--- a/fridgeui/nginx.conf
+++ b/fridgeui/nginx.conf
@@ -26,7 +26,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Serve static assets correctly
+    
+    location /media/ {
+        alias /app/media/;
+        autoindex on;
+        access_log off;
+    }
+
+    # 静态资源缓存优化
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp3|mp4|webm)$ {
         expires 6M;
         access_log off;
