--- a/fridgeui/nginx.conf
+++ b/fridgeui/nginx.conf
@@ -26,6 +26,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /core/media/ {
+        alias /app/media/;
+        autoindex on;
+        access_log off;
+    }
     
     location /media/ {
         alias /app/media/;
