--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Auto Deploy to EC2 (push Docker image)
 on:
   push:
     branches:
-      - deploy  # 或你要监听的分支
+      - deploy  
+      - main
 
 jobs:
   deploy:
@@ -54,7 +55,7 @@ jobs:
             -v /home/ubuntu/fridge/backend/media:/app/media \
             -p 8000:8000 \
             fridge-backend
-            
+
           docker run -d \
           --name frontend \
           -v /home/ubuntu/fridge/backend/media:/app/media \
